--- a/master/pm/WEB-INF/web.xml
+++ b/master/pm/WEB-INF/web.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4"
-xmlns="http://java.sun.com/xml/ns/j2ee" 
-xmlns="http://java.sun.com/xml/ns/j2ee" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
-http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<welcome-file-list>
-		<welcome-file>../../client/svgcanvas.html</welcome-file> 
-	</welcome-file-list>
+<web-app version="2.5"
+xmlns="http://java.sun.com/xml/ns/javaee"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+metadata-complete="true">
+
+<welcome-file-list>
+	<welcome-file>PAGE/index.html</welcome-file> 
+</welcome-file-list>
+
+<filter>
+   <filter-name>cross-origin</filter-name>
+   <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+   <init-param>
+       <param-name>allowedOrigins</param-name>
+       <param-value>*</param-value>
+   </init-param>
+   <init-param>
+       <param-name>allowedMethods</param-name>
+       <param-value>*</param-value>
+   </init-param>
+   <init-param>
+       <param-name>allowedHeaders</param-name>
+       <param-value>*</param-value>
+   </init-param>
+ </filter>
+ 
+ <filter-mapping>
+     <filter-name>cross-origin</filter-name>
+     <url-pattern>/*</url-pattern>
+ </filter-mapping>
+
 </web-app> 
